<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quake Info</string>

    <!-- Default text to show with the earthquake location ("Close to Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Close to</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">Oops! No data to show.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">Uh! Your internet connection :(</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Apply Filters</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Least Possible Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Narrow by Region Preference [CHAR LIMIT=NONE] -->
    <string name="settings_narrow_by_region_label">Narrow by Country</string>
    <string name="settings_narrow_by_region_key" translatable="false">narrow_by_region</string>
    <string name="settings_narrow_by_region_default" translatable="false">Japan</string>

    <!-- Strings For Maximum Radius Preference [CHAR LIMIT=NONE] -->
    <string name="settings_maximum_radius_label">Maximum Region Radius</string>
    <string name="settings_maximum_radius_key" translatable="false">maximum_radius</string>
    <string name="settings_maximum_radius_default" translatable="false">180</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=NONE] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Strings For Dark Theme Preference [CHAR LIMIT=30] -->
    <string name="settings_dark_theme">Dark Theme</string>
    <string name="settings_dark_theme_off" translatable="false">Off</string>
    <string name="settings_dark_theme_on" translatable="false">On</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <string name="app_intro">Intro</string>

    <string name="share_message">Hey there! I just used the Quake Info app. I found it awesome! Search for "Quake Info" and download the app for free from Google Play Store.</string>
    <string name="sharing_title">Care to share?</string>
    <string name="about">About</string>

    <string name="did_you_feel_it">Did you feel it?</string>
    <string name="more_apps">More apps</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="get_notification_alert">Get Notification alert</string>
    <string name="notification_title">Notifications</string>
    <string name="info_title">Attention!</string>
    <string name="info_message">This feature is still in beta. Therefore, we are loading an example template from USGS. Check for future updates!</string>
    <string name="info_of_notif_title">Get started with alerts</string>
    <string name="info_of_notif_message">Just tap on \"Try ENS or Subscribe\" button and enter your email in the next page.</string>
    <string name="list_refreshed">List Refreshed</string>


</resources>
